--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     </div>
 
                     <div class="col-12 mbr-form form-container card-border" data-form-type="formoid">
-                        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="goJ95tv9gAzV5vj14UYJ3m/DSe0j+kqmamCy5aNWHjXYsHN8ERq5N7jI1orr0JUhDSBCnlL8mBX1kjSdWZ3XtLFWjXnitzVqPQcSIhi0A3D0n8qdog0Ruq0mLMRI3TC0.7PQNe5L1O4GHefY4QuRSURLhuJJTOGpRznZm8darc/cEvf5dvIHYL+evsdICjWXcNzSrJKPOsm0cRsTayMT06HeKsmbBzB2NCl1Ru+xNk4w4I9+WZi2j5p1v+JpogoPn">
+                        <form name="contact" method="POST" data-netlify="true" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="goJ95tv9gAzV5vj14UYJ3m/DSe0j+kqmamCy5aNWHjXYsHN8ERq5N7jI1orr0JUhDSBCnlL8mBX1kjSdWZ3XtLFWjXnitzVqPQcSIhi0A3D0n8qdog0Ruq0mLMRI3TC0.7PQNe5L1O4GHefY4QuRSURLhuJJTOGpRznZm8darc/cEvf5dvIHYL+evsdICjWXcNzSrJKPOsm0cRsTayMT06HeKsmbBzB2NCl1Ru+xNk4w4I9+WZi2j5p1v+JpogoPn">
                             
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
