--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                         <div class="d-flex align-items-center mb-2">
                             <span class="mbr-iconfont socicon socicon-mail me-2 text-primary" style="font-size: 1.5rem;"></span>
-                            <span class="mbr-fonts-style display-7 text-dark">Email: <strong>FLOWANGELSBOOKING@GMAIL.COM</strong></span>
+                            <span class="mbr-fonts-style display-7 text-dark">Email: <strong>flowangelsbooking@gmail.com</strong></span>
                         </div>
                         <div class="d-flex align-items-center">
                             <span class="mbr-iconfont socicon socicon-instagram me-2 text-danger" style="font-size: 1.5rem;"></span>
